Added fotostack and science.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
     <img class="background-image" src="/imgs/Kuhflucht.jpeg">
     <div class="header-container">
-        <a class="menu-link" href="">fotography </a>  
-        <a class="menu-link" href="">science </a>  
+        <a class="menu-link" href="fotography.html">fotography </a>  
+        <a class="menu-link" href="science.html">science </a>  
         <a class="menu-link" href="">contact </a>
     </div>
 </body>
