made pictures not dragable

--- a/fotography.html
+++ b/fotography.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="styles_header.css">
     <link rel="stylesheet" type="text/css" href="styles_overlay.css">
-    <title>Document</title>
+    <title>Jens Krause Fotography</title>
 </head>
 <script src="script.js"></script>
 <body>
@@ -58,7 +58,7 @@
     <script src="fotos.js"></script>
     </div>
     <div class="overlay">
-        <img class="overlay-image" src="" alt="Large Image">
+        <img class="overlay-image" src="" alt="Large Image" draggable="false">
     </div>
     <script src="overlay.js"></script>
 </body>
