--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Jens Krause Webage</title>
+    <title>Jens Krause Home</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
         body {
@@ -19,7 +19,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <img class="background-image" src="/imgs/Kuhflucht.jpeg">
+    <img class="background-image" src="/imgs/Kuhflucht.jpeg" draggable="false">
     <div class="header-container">
         <a class="menu-link" href="fotography.html">fotography </a>  
         <a class="menu-link" href="science.html">science </a>  
