--- a/science.html
+++ b/science.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles_science.css">
     <link rel="stylesheet" type="text/css" href="styles_header.css">
     <link rel="stylesheet" type="text/css" href="styles_overlay.css">
-    <title>Document</title>
+    <title>Jens Krause Science</title>
 </head>
 <style>
 
@@ -27,7 +27,7 @@
 </style>
 <script src="script.js"></script>
 <body>
-    <img class="background-image" src="/imgs/science_fotos/1.jpeg">
+    <img class="background-image" src="/imgs/science_fotos/1.jpeg" draggable="false">
     <header>
         <div class="header-bar-blocked">
             <a class="bar-link" href="index.html">home </a>  
