added max side-width and contacts page

--- a/fotography.html
+++ b/fotography.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="styles_header.css">
-    <link rel="stylesheet" type="text/css" href="styles_overlay.css">
+    <link rel="stylesheet" type="text/css" href="styles/general.css">
+    <link rel="stylesheet" type="text/css" href="styles/header.css">
+    <link rel="stylesheet" type="text/css" href="styles/overlay.css">
     <title>JK Fotography</title>
 </head>
 <script src="script.js"></script>
@@ -47,11 +47,12 @@
 
         
     </style>
+<div class="container">
     <header>
         <div class="header-bar">
             <a class="bar-link" href="index.html">home </a>  
-            <a class="bar-link" href="science.html">science </a>  
-            <a class="bar-link" href="">contact </a>
+            <a class="bar-link" href="work.html">work </a>  
+            <a class="bar-link" href="contact.html">contact </a>
         </div>
     </header>
     <div class="content" >
@@ -61,5 +62,6 @@
         <img class="overlay-image" src="" alt="Large Image" draggable="false">
     </div>
     <script src="overlay.js"></script>
+</div>
 </body>
 </html>
