--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>JK Home</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/general.css">
     <style>
         body {
             margin: 0;
@@ -19,11 +19,13 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <img class="background-image" src="/imgs/Kuhflucht.jpeg" draggable="false">
-    <div class="header-container">
-        <a class="menu-link" href="fotography.html">fotography </a>  
-        <a class="menu-link" href="science.html">science </a>  
-        <a class="menu-link" href="">contact </a>
+    <img class="background-image" src="/imgs/backgrounds/Kuhflucht.jpeg" draggable="false">
+    <div class="container">
+        <div class="header-container">
+            <a class="menu-link" href="fotography.html">fotography </a>  
+            <a class="menu-link" href="work.html">work </a>  
+            <a class="menu-link" href="">contact </a>
+        </div>
     </div>
 </body>
 </html>
