--- a/fotography.html
+++ b/fotography.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles/general.css">
     <link rel="stylesheet" type="text/css" href="styles/header.css">
     <link rel="stylesheet" type="text/css" href="styles/overlay.css">
-    <title>JK Fotography</title>
+    <title>Jens Krause</title>
 </head>
 <script src="script.js"></script>
 <body>
