--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>JK Home</title>
+    <title>Jens Krause</title>
     <link rel="stylesheet" type="text/css" href="styles/general.css">
     <style>
         body {
