--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/science.css">
     <link rel="stylesheet" type="text/css" href="styles/header.css">
     <link rel="stylesheet" type="text/css" href="styles/overlay.css">
-    <title>JK Science</title>
+    <title>Jens Krause</title>
 </head>
 <style>
 
