contact link in index

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="header-container">
             <a class="menu-link" href="fotography.html">fotography </a>  
             <a class="menu-link" href="work.html">work </a>  
-            <a class="menu-link" href="">contact </a>
+            <a class="menu-link" href="contact.html">contact </a>
         </div>
     </div>
 </body>
